feat:完成报警基础配置、设备和数据报警通知配置模块